fix spacing between cards and after last

--- a/_sass/_software.scss
+++ b/_sass/_software.scss
@@ -38,3 +38,7 @@
     // padding-left: 15px;
   }
 }
+
+.software-card + .software-card {
+  margin-top: 1rem;
+}
